# muuzika

./: README.md  compose.yml  diesel.toml  docker-compose.yml
.github/workflows/: registry.yml
artemis/: .gitignore  broker.xml
artemis/etc/: .gitignore  broker.xml
artemis/etc-override/: broker.xml
dev-listerner/: listener.js  package-lock.json  package.json
envoy/: envoy.yaml
kreya/: .gitignore  Local.krenv  Muuzika.krproj  directory.krpref
kreya/muuzika/: directory.krpref
kreya/muuzika/connection_handler/ConnectionHandlerService/: ImAlive-request.json  ImAlive.krop  OnConnect-request.json  OnConnect.krop  OnDisconnect-request.json  OnDisconnect.krop
kreya/muuzika/registry/RegistryService/: CreateRoom-request.json  CreateRoom.krop  ListRooms-request.json  ListRooms.krop  RegisterServer-request-0.json  RegisterServer.krop
learning-bull/: package-lock.json  package.json
learning-bull/src/: index.ts
migrations/2023-12-28-033238_create_rooms/: down.sql  up.sql
migrations/2023-12-28-035922_define_get_available_code/: down.sql  up.sql
migrations/2023-12-28-040647_define_create_room_with_available_code/: down.sql  up.sql
migrations/2023-12-28-041848_create_players/: up.sql
migrations/2024-02-20-181526_create_parameters/: up.sql
migrations/2024-02-20-182144_seed_default_parameters/: down.sql  up.sql
migrations/2024-02-21-000806_create_possible_codes/: down.sql
migrations/2024-02-21-141135_define_get_available_code/: down.sql
migrations/2024-02-21-141458_define_create_room_with_available_code/: down.sql
migrations/2024-02-21-145415_create_players/: down.sql  up.sql
migrations_old/2024-02-20-182144_seed_default_parameters/: up.sql
migrations_old/2024-02-21-000806_create_possible_codes/: up.sql
migrations_old/2024-02-21-141106_create_rooms/: up.sql
migrations_old/2024-02-21-141135_define_get_available_code/: up.sql
migrations_old/2024-02-21-145415_create_players/: up.sql
mq-test/: connection.js  consumer.js  package-lock.json  package.json  producer.js
nginx/conf.d/: default.conf
proto/: broadcast.proto  common.proto  connection_handler.proto  errors.proto  jobs.proto  lobby.proto  registry.proto  testing.proto
proto/registry/: common.proto  create_room.proto  lobby.proto  registration.proto  registry.proto  server_room.proto  sync_room.proto
redis/: Dockerfile  redis copy.conf  redis.conf
registry/: .gitignore  Cargo.toml  build.rs  build.sbt
registry/migrations/: 0_schema.sql
registry/project/: plugins.sbt
registry/src/: codes.rs  db.rs  errors.rs  generator.rs  init.rs  lib.rs  main.rs  options.rs  packing.rs  registry.rs  room.rs  server.rs  service.rs  state.rs  utils.rs
registry/src/main/scala/com/muuzika/: CodeGenerator.scala  ProtoExtensions.scala  Registry.scala  RegistryServer.scala  Server.scala
registry/src/main/scala/com/muuzika/services/: RegistryServiceImpl.scala  RegistryServiceLobbyImpl.scala
registry/src/messages/: mod.rs  registration.rs
registry/src/services/: mod.rs  registry_lobby_service.rs  registry_service.rs
registry/src/test/scala/com/muuzika/: CodeGeneratorSpec.scala
registry/src/utils/: macros.rs  mod.rs  packing.rs  stream.rs  test_utils.rs
registry/tests/: create_room.rs  registration.rs  utils.rs
relayer_node/: index.ts  package.json  pnpm-lock.yaml  tsconfig.json
relayer_node/src/: amqp.ts  controller.ts  grpc.ts  server.ts  ws.ts
rust/: Cargo.toml  build.rs
rust/src/: errors.rs  lib.rs  main.rs  misc.rs  proto.rs  queue.rs  schema.rs  server.rs  state.rs
rust/src/db/: mod.rs  models.rs  pool.rs  queries.rs  schema.rs
rust/src/lobby/: service.rs
rust/src/mq/: handler.rs  utils.rs
rust/src/services/: lobby.rs  mod.rs
server/: Cargo.toml  build.rs
server/src/: lib.rs  main.rs
test-grpc-web/: package.json  pnpm-lock.yaml
test-grpc-web/src/: App.vue
worker_rust/: Cargo.toml  build.rs
worker_rust/src/: errors.rs  lib.rs  main.rs  state.rs
worker_rust/src/services/: connection_handler.rs  mod.rs
