[package]
name = "muuzika-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["server"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
dashmap = "6.1.0"
rand = "0.9.0"
nanoid = "0.4.0"

[build-dependencies]
glob = "0.3.1"
tonic-build = "0.12.3"
