[package]
name = "muuzika_registry"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.27"
nanoid = "0.4.0"
pretty_env_logger = "0.5.0"
prost = "0.13.5"
prost-types = "0.13.5"
rand = "0.9.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.1", features = ["server"] }
whirlwind = "0.1.1"

[build-dependencies]
glob = "0.3.2"
tonic-build = "0.13.1"
