[package]
name = "muuzika"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.17"
diesel = { version = "2.1.4" }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
rs-snowflake = "0.6.0"
thiserror = "1.0.57"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.197", features = ["derive"] }
tonic = "0.11.0"
prost = "0.12.3"

[build-dependencies]
tonic-build = "0.11.0"
