[package]
name = "muuzika_worker"
version = "0.1.0"
edition = "2021"

[dependencies]
fe2o3-amqp = { version = "0.12.0", features = ["log"] }
log = "0.4.22"
pretty_env_logger = "0.5.0"
prost = "0.13.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.1"

[build-dependencies]
tonic-build = "0.12.1"
